# CMake-Template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt
analysis/cppcheck/: CMakeLists.txt  misra.txt
cmake/: FindClangFormat.cmake  FindCppCheck.cmake  FindCppCheckHtmlReport.cmake  FindSphinx.cmake
docs/: CMakeLists.txt  conf.py  config.txt  index.rst  requirements.txt
hello/: CMakeLists.txt
hello/src/: main.c
